name:                reservation-app
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/AntoineGagne/reservation-app#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          antoine.gagne.2@ulaval.ca
copyright:           2017 Antoine Gagné
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Calendar
                     , Configuration
                     , Model
                     , User
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant-server
                     , text
                     , time
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable reservation-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , persistent-sqlite
                     , reservation-app
                     , safe
                     , warp
  default-language:    Haskell2010

test-suite reservation-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , case-insensitive
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , reservation-app
                     , servant-server
                     , wai
                     , wai-extra
                     , warp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AntoineGagne/reservation-app
